# clowder-extractors

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  Run-Clowder-locally.md  docker-compose-remat-extractors.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
csv-stripper/: Dockerfile  extractor_info.json  remat.csv_stripper.py  requirements.txt
experiment-from-excel/: Dockerfile  chemistry.py  extractor_info.json  remat.experiment_from_excel.py  requirements.txt  test_chemistry.py
parameter-extractor/: Dockerfile  extractor_info.json  remat.parameter_extractor.py  requirements.txt
scripts/: ClowderElasticSearch.postman_collection.json  README.md  delete_space_file_metadata.py  trigger_space_file_extractions.py
src/clowder_extractors/csv_stripper/: Dockerfile  extractor_info.json  remat_csv_stripper.py
src/clowder_extractors/experiment_from_excel/: Dockerfile  chemistry.py  extractor_info.json  remat_experiment_from_excel.py  test_chemistry.py
src/clowder_extractors/parameter_extractor/: BoxHandler.py  Dockerfile  clowder_dataset_helpers.py  delete_space_file_metadata.py  extractor_info.json  notes.py  remat_parameter_extractor.py  trigger_space_file_extractions.py
